사소한 수정작업

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-lg-12">
       <p>
-        내가 이걸 왜 만들고 있는지 모르겠지만 뭐 일단...
+        내가 이걸 왜 만들고 있는지 모르겠다......
       </p>
     </div>
   </div>
